added test project with loom support